# Maidbot

./: .gitignore  Cargo.toml  README.md  config.json  maidbot.js  package-lock.json  package.json  tsconfig.json
src/: config.json  localwebserver.rs  maidbot.ts  main.rs  salutations.js
src/commands/: mod.rs  moe_moe_kyun.rs  ping.rs  poll.rs
src/handlers/: handler.rs  interaction_create.rs  mod.rs
src/utils/: constants.rs
