[package]
name = "maid_bot"
version = "0.1.0"
edition = "2021"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "^0.15.6"
rouille = "^3.6.1"

[dependencies.serenity]
version = "^0.11.5"
default-features = false
features = [
    "client",
    "gateway",
    "native_tls_backend",
    "model",
    # "builder",
    # "cache",
    # "http",
    # "utils",
    "framework",
    "standard_framework",
]

[dependencies.tokio]
version = "^1.22.0"
features = [
    "macros",
    "rt-multi-thread",
]
